src/objects/Lane__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <label>Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lane_Id__c</fullName>
        <label>Lane Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Lane Sync</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Sync_Status__c</columns>
        <columns>Lane_Id__c</columns>
        <columns>Group_Id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lane Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lane Syncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>